[gd_scene load_steps=12 format=3 uid="uid://b1n8h5b743810"]

[ext_resource type="Script" uid="uid://qk832p8i7x8w" path="res://menu/main_menu.gd" id="1_1x3cv"]
[ext_resource type="FontFile" uid="uid://bbfeoo2kuf30n" path="res://addons/icons-fonts/icons_fonts/MaterialIcons/material_design_icons.ttf" id="1_o5w3e"]
[ext_resource type="Script" uid="uid://cb15ev6uj0mae" path="res://addons/icons-fonts/resources/FontIconSetting.gd" id="3_jc45y"]
[ext_resource type="Script" uid="uid://bcaq00hs46apu" path="res://menu/mute_icon.gd" id="3_o5w3e"]
[ext_resource type="PackedScene" uid="uid://dsldwxppld7qs" path="res://menu/guide.tscn" id="5_jc45y"]
[ext_resource type="PackedScene" uid="uid://ba1tb460sgjmu" path="res://menu/role_select.tscn" id="6_s8mfa"]
[ext_resource type="PackedScene" uid="uid://fo8m25hebh0s" path="res://menu/count_down.tscn" id="7_0tw43"]
[ext_resource type="PackedScene" uid="uid://bcc0g0g506rsg" path="res://menu/rank.tscn" id="8_youj7"]

[sub_resource type="LabelSettings" id="LabelSettings_s8mfa"]
font = ExtResource("1_o5w3e")
font_size = 32
shadow_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_1x3cv"]
script = ExtResource("3_jc45y")
icon_font = "MaterialIcons"
icon_name = "volume-source"
icon_size = 32
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)
metadata/_custom_type_script = "uid://cb15ev6uj0mae"

[sub_resource type="ButtonGroup" id="ButtonGroup_s8mfa"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1x3cv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="MenuContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -323.5
offset_right = 136.0
offset_bottom = 323.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 70
alignment = 1

[node name="Title" type="Label" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Jump Quest"

[node name="ScoreContainer" type="HBoxContainer" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MenuContainer/VBoxContainer/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Score:"

[node name="Score" type="Label" parent="MenuContainer/VBoxContainer/ScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MuteIcon" type="Label" parent="MenuContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
text = "󱄠"
label_settings = SubResource("LabelSettings_s8mfa")
script = ExtResource("3_o5w3e")
icon_settings = SubResource("Resource_1x3cv")
metadata/_custom_type_script = "uid://sfoyl3fbn8so"

[node name="VolumeSlider" type="HSlider" parent="MenuContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="CenterContainer" type="CenterContainer" parent="MenuContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CountDownButton" type="CheckButton" parent="MenuContainer/VBoxContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "游戏开始倒计时"

[node name="DifficultyContainer" type="HBoxContainer" parent="MenuContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Easy" type="CheckBox" parent="MenuContainer/VBoxContainer/VBoxContainer/DifficultyContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
button_group = SubResource("ButtonGroup_s8mfa")
text = "简单"

[node name="Normal" type="CheckBox" parent="MenuContainer/VBoxContainer/VBoxContainer/DifficultyContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
button_group = SubResource("ButtonGroup_s8mfa")
text = "一般"

[node name="Hard" type="CheckBox" parent="MenuContainer/VBoxContainer/VBoxContainer/DifficultyContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
button_group = SubResource("ButtonGroup_s8mfa")
text = "困难"

[node name="StartButton" type="Button" parent="MenuContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "开始游戏"

[node name="RoleButton" type="Button" parent="MenuContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "形象选择"

[node name="ContinueButton" type="Button" parent="MenuContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "继续游戏"

[node name="StopButton" type="Button" parent="MenuContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "结束游戏"

[node name="GuideButton" type="Button" parent="MenuContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "游戏引导"

[node name="RandButton" type="Button" parent="MenuContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "排行榜"

[node name="ExitButton" type="Button" parent="MenuContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "退出游戏"

[node name="VersionContainer" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -108.0
offset_top = -60.0
offset_right = -40.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="MenuContainer/VersionContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.392543, 0.392543, 0.392543, 1)
text = "Version:"

[node name="VersionInfo" type="Label" parent="MenuContainer/VersionContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.392543, 0.392543, 0.392543, 1)

[node name="Guide" parent="." instance=ExtResource("5_jc45y")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="RoleSelect" parent="." instance=ExtResource("6_s8mfa")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="CountDown" parent="." instance=ExtResource("7_0tw43")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Rank" parent="." instance=ExtResource("8_youj7")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="drag_ended" from="MenuContainer/VBoxContainer/VBoxContainer/HBoxContainer/VolumeSlider" to="." method="_on_volume_slider_drag_ended"]
[connection signal="toggled" from="MenuContainer/VBoxContainer/VBoxContainer/CenterContainer/CountDownButton" to="." method="_on_count_down_button_toggled"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/VBoxContainer/RoleButton" to="." method="_on_role_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/VBoxContainer/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/VBoxContainer/GuideButton" to="." method="_on_guide_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/VBoxContainer/RandButton" to="." method="_on_rand_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
